--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     <div class="intro d-flex justify-content-center align-items-center animated">
         <div class="start d-flex flex-column align-items-center justify-content-center">
             <div class="text-center start-text">
-                WELCOME TO ICONIC! 
+                WELCOME TO ICONIC!
             </div>
+            <div class="text-center">All you have to do is match the icons. Ready?</div>
             <button type="button" class="btn start-button">Start</button>
         </div>
     </div>
@@ -43,7 +44,7 @@
     <!--Board-->
     <div class="mat1 d-flex justify-content-center align-items-center no-display animated">
         <div class="d-flex flex-column board">
-            <div class="d-flex myRow flex-grow-1 align-items-center">
+            <div class="d-flex myRow align-items-center">
                 <div class="col animated clicked">
                     <div class="d-flex justify-content-center align-items-center">
                         <i data-position = "1" class="fab hidden"></i>
@@ -65,7 +66,7 @@
                     </div>                 
                 </div>
             </div>
-            <div class="d-flex myRow flex-grow-1 align-items-center">
+            <div class="d-flex myRow align-items-center">
                 <div class="col animated clicked">                     
                     <div class="d-flex justify-content-center align-items-center">                         
                         <i data-position = "5" class="fab hidden"></i>                     
@@ -87,7 +88,7 @@
                     </div>                 
                 </div>
             </div>
-            <div class="d-flex myRow flex-grow-1 align-items-center">
+            <div class="d-flex myRow align-items-center">
                 <div class="col animated clicked">                     
                     <div class="d-flex justify-content-center align-items-center">                         
                         <i data-position = "9" class="fab hidden"></i>                     
@@ -106,6 +107,28 @@
                 <div class="col animated clicked">                     
                     <div class="d-flex justify-content-center align-items-center">                         
                         <i data-position = "12" class="fab hidden"></i>                     
+                    </div>                 
+                </div>
+            </div>
+            <div class="d-flex myRow align-items-center">
+                <div class="col animated clicked">                     
+                    <div class="d-flex justify-content-center align-items-center">                         
+                        <i data-position = "13" class="fab hidden"></i>                     
+                    </div>                 
+                </div>
+                <div class="col animated clicked">                     
+                    <div class="d-flex justify-content-center align-items-center">                         
+                        <i data-position = "14" class="fab hidden"></i>                     
+                    </div>                 
+                </div>
+                <div class="col animated clicked">                     
+                    <div class="d-flex justify-content-center align-items-center">                         
+                        <i data-position = "15" class="fab hidden"></i>                     
+                    </div>                 
+                </div>
+                <div class="col animated clicked">                     
+                    <div class="d-flex justify-content-center align-items-center">                         
+                        <i data-position = "16" class="fab hidden"></i>                     
                     </div>                 
                 </div>
             </div>
