--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="text-center start-text">
                 WELCOME TO ICONIC!
             </div>
-            <div class="text-center">All you have to do is match the icons. Ready?</div>
+            <div id="intro-text" class="text-center">All you have to do is match the icons. Ready?</div>
             <button type="button" class="btn start-button">Start</button>
         </div>
     </div>
