--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <!--Header Text-->
-    <div class="d-flex justify-content-center">
+    <div id="head" class="d-flex justify-content-center">
         <div class="header jumbotron d-flex flex-column text-center">
             <div class="text">ICONIC</div>
             <div class="time">Time: </div>
@@ -36,13 +36,13 @@
             <div class="text-center end-text">
                 YOU WON 
             </div>
-            <div class="time-text"></div>
+            <div class="text-center time-text"></div>
             <button type="button" class="btn play-again">Play Again</button>
         </div>
     </div>
     
     <!--Board-->
-    <div class="mat1 d-flex justify-content-center align-items-center no-display animated">
+    <div id="myBoard" class="d-flex justify-content-center no-display animated">
         <div class="d-flex flex-column board">
             <div class="d-flex myRow align-items-center">
                 <div class="col animated clicked">
